<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Loging">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">


        <Button
            android:id="@+id/editText"
            android:hint="@string/intcorreo"
            android:onClick="chooseAccount"
            android:layout_above="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textEmailAddress"
            style="@style/edit_text"/>

        <EditText
            android:id="@+id/editText2"
            android:hint="@string/contrasena"
            android:layout_above="@+id/bLoging"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            style="@style/edit_text"/>

        <Button
            android:id="@+id/bLoging"
            android:text="@string/bLoging"
            android:onClick="goMenu"
            android:layout_marginTop="25dp"
            style="@style/button_text" />

        <Button
            android:id="@+id/bRegistro"
            android:text="@string/bRegistro"
            android:onClick="goRegistro"
            android:layout_below="@+id/bLoging"
            android:layout_marginTop="40dp"
            style="@style/button_text"/>
    </RelativeLayout>

</LinearLayout>
